Changed website color scheme. Fixed some spacing issues. Added smooth scroll. Hiding back to top button if it is already on top

--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -9,7 +9,7 @@
 Base styles:  opinionated defaults
 ========================================================================== */
 html,button,input,select,textarea {
-    color: #000000;
+    color: #222222;
 }
 
 body {
@@ -84,7 +84,7 @@ Author's custom styles
 ========================================================================== */
 /* ====Structure and Utility Classes==== */
 body {
-    background: #eee;
+    background: #F4F4F4;
     color: #222;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
@@ -131,7 +131,8 @@ article.info p {
 
 hgroup h1 {
     font-weight: 400;
-    font-size: 1.5em;
+    font-size: 2em;
+    font-family: serif;
     margin-bottom: 0;
     padding-top: 0;
 }
@@ -146,7 +147,7 @@ hgroup h2 {
 /* ====Header==== */
 header {
     margin-top: 1.8em;
-    background: #96C8A2;
+    background: #00b3ff;
     height: 2.5em;
 }
 
@@ -181,7 +182,7 @@ header nav ul li:last-child:after {
 }
 
 header nav ul li a {
-    color: #ffffff;
+    color: #f2f2f2;
     font-size: 0.8em;
     padding: 0.20em 0.5em;
     line-height: 2.8em;
@@ -192,35 +193,30 @@ header nav ul li a {
 
 header nav ul li a:hover {
     color: #fff;
+    text-shadow: #f2f2f2 -1px 1px 1px;
 }
 
 /* ====Main Body==== */
 p.intro {
     margin-top: 1.05em;
-    color: #000000;
+    color: #76778A;
     font-size: 4em;
     font-weight: 700;
     width: 8em;
 }
-.text {
-	color:#222;
-	}
-
-.red {
-    color: #c57482;
-}
 
 /* ====Meter==== */
+
 #meter {
     margin: 5em 3.2em 0 1.5em;
     width: 22em;
-    color: #6D7B8D ;
+    color: #fff;
     font-size: 1em;
 }
 
 #meter .wrap {
     padding: 1em 2em;
-    background-color:#E8E8E8  ;
+    background-color: #76777A;
 }
 
 #meter img {
@@ -228,23 +224,17 @@ p.intro {
     padding-bottom: 0.2em;
 }
 
-#meter ul li {
-width: 22em;
-    color: #6D7B8D ;
-    }
-
-
 .time-left {
     text-align: right;
     font-weight: 300;
     margin: 0;
     font-size: 0.9em;
     padding: 0;
-    color: #000000;
+    color: #f4f4f4;
 }
 
 .time-left span.amount {
-    color: #000;
+    color: #fff;
     font-weight: 700;
 }
 
@@ -279,20 +269,20 @@ width: 22em;
     font-size: 1.3em;
     font-weight: 300;
     margin-bottom: 0;
-    color: #000;
+    color: #eee;
 }
 
 .money-goal span {
     font-weight: 400;
-    color: #f70000;
+    color: #fff;
 }
 
 a.donate {
     width: 100%;
     display: block;
     text-align: center;
-    background-color: #96C8A2;
-    color: #A34041;
+    background-color: #00b3ff;
+    color: #fff;
     font-weight: 300;
     border: none;
     font-size: 1.3em;
@@ -302,33 +292,18 @@ a.donate {
     border-bottom-right-radius: 0.425em;
     border-bottom-left-radius: 0.425em;
     -webkit-box-shadow: 0 0.1em 0.1em #ddd;
-    box-shadow: 0 0.1em 0.1em #ddd;
-    text-decoration: none;
-}
-a.donate2 {
-    width: 10em;
-    height: 5em;
-    display: block;
-    text-align: center;
-    background-color: #96C8A2;
-    color: #A34041;
-    font-weight: 300;
-    border: none;
-    font-size: 1.3em;
-    line-height: 5em;
-    padding: 0.15em 0.15em 0.15em 0.15em;
-    margin-top: 0em;
-    border-bottom-right-radius: 0.425em;
-    border-bottom-left-radius: 0.425em;
-    border-top-left-radius: 0.425em;
-    border-top-right-radius: 0.425em;
-    -webkit-box-shadow: 0 0.1em 0.1em #ddd;
-    box-shadow: 0 0.1em 0.1em #ddd;
+    box-shadow: 0 0.1em 0.5em #aaa;
     text-decoration: none;
 }
 
+a.donate.variant {
+    width: 8em;
+    border-radius: 0.425em;
+}
+
 a.donate:hover {
-    background-color: #acd7ca;
+    background-color: #33d0ff;
+    box-shadow: 0 0.1em 0.1em #aaa;
 }
 
 /* Video */
@@ -352,10 +327,10 @@ a.donate:hover {
 
 /* paragraph after who*/
 #who .person {
-    width: 6em;
-    height: 6em;
+    width: 7em;
+    height: 7em;
     background: #ddd;
-    margin: 1em;
+    margin:  0.5em;
     float:left;
 }
 
@@ -372,8 +347,8 @@ a.donate:hover {
 }
 
 #who .person img {
-    width: 6em;
-    height: 6em;
+    width: 100%;
+    height: 7em;
 }
 
 #perks .pull-right{
@@ -396,7 +371,7 @@ article.info p {
 /* Footer*/
 
 footer:before {
-    margin-top: 5em;
+    margin-top: 1em;
     content: "***";
     display: block;
     font-size: 2em;
@@ -528,7 +503,7 @@ Inlined to avoid required HTTP connection:  h5bp.com/r
     text-shadow: none !important;
 }
 
-a,a:visited {
+a, a:visited {
     text-decoration: underline;
 }
 
@@ -586,12 +561,12 @@ h2,h3 {
     line-height: 20px;
     border: 1px solid #e6e6e6;
     border-radius: 4px;
-    
+
 }
 #gBtn:hover {
     background-color: #cc3732;
     color: #fff;
     border: 1px solid #dd4b39;
-    
+
 }
 
